# OS-Nano

./: .babelrc.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  installdev.sh  package-lock.json  package.json  platformio.ini  simulator.html
include/: lv_conf.h
rootfs/: hello.txt
rootfs/apps/hello/: app.js
rootfs/apps/hello2/: app.js
rootfs/apps/launcher/: app.js
rootfs/system/: api.min.js
rootfs/system/fonts/: main-20.gosnf  main.gosnfont  numerals-32.gosnf  numerals-64.gosnf
rootsrc/: api.js
rootsrc/system/: api.js
simulator/: index.html
src/: api.cpp  api.h  app.cpp  app.h  common.h  config.h  datatypes.cpp  datatypes.h  display.cpp  display.h  fs.cpp  fs.h  main.cpp  proc.cpp  proc.h  theme.cpp  theme.h  timing.cpp  timing.h
